Added info and images at index

--- a/Index.html
+++ b/Index.html
@@ -3,9 +3,92 @@
 
 <head>
     <title> LA MADRIGUERA </title>
+    <link href="./CSS/index.css" rel="STYLESHEET">
+    <link href="https://fonts.googleapis.com/css2?family=Phudu:wght@300;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
+    <header>
+        <nav>
+            <div id="Secmenu" >
+                <ul>
+                    <li> 
+                        <a href:"C:\Users\EstefaniaArenas\Documents\LAMADRIGUERA\Index.html"> HOME </a> 
+                        <ul>
+                            <li> 
+                                <a href:"#"> What is La Madriguera? </a>
+                            </li>
+                            <li>
+                                <a href:"#"> Yogurt Benefits </a>
+                            </li>
+                            <li> 
+                                <a href:"#"> Yogurt ingredients </a>
+                            </li>
+                            <li> 
+                                <a href:"#"> Bacterial cultures </a>
+                            </li>
+                            <li>
+                                <a href:"#"> How to drink our yogurt? </a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href:"#"> STORE </a> 
+                    </li>
+                    <li>
+                        <a href:"#"> ABOUT US </a>
+                    </li>
+                    <li>
+                        <a href:"#"> CONTACT US </a>
+                    </li>
+                </ul>
+            </div>
+            <div class="imagecontainer">
+                <img 
+                src="./MEDIA/images/lamadrigueralogo.jpeg"
+                >
+            </div>
+        </nav>
+    </header>
+    <main>
+        <div id="branding">
+            <h1>
+                LA MADRIGUERA
+            </h1> 
+            <h class="slogan">
+                Artesanal como nuestras raíces
+            </h2>
+        </div>
+        <div id="whatis">
+            <br>
+            <br>
+            <h2> What is La Madriguera? </h2>
+            <p>
+                <br>
+                It is a space where we want people to feel like a refuge where they can find their way to a more conscious
+                and healthy diet, without fear of making mistakes and with the desire to discover new alternatives. 
+                <span> What you can find here? </span>
+                <ul> 
+                    <li> 
+                        Nutrition guides 
+                    </li>
+                    <li> 
+                        Healty products 
+                    </li>
+                    <li> 
+                        Self care guidance 
+                    </li>
+                    <li> 
+                        Design your healty diet, according to your needs 
+                    </li>
+                </ul>
+            </p>
+            <img src="./MEDIA/images/healthydiet.jpg">
+        </div>
+        <div id="secbenefits">
+
+        </div>
+    </main>
 </body>
 
 
