--- a/Index.html
+++ b/Index.html
@@ -10,85 +10,218 @@
 <body>
     <header>
         <nav>
-            <div id="Secmenu" >
-                <ul>
-                    <li> 
-                        <a href:"C:\Users\EstefaniaArenas\Documents\LAMADRIGUERA\Index.html"> HOME </a> 
-                        <ul>
-                            <li> 
-                                <a href:"#"> What is La Madriguera? </a>
-                            </li>
-                            <li>
-                                <a href:"#"> Yogurt Benefits </a>
-                            </li>
-                            <li> 
-                                <a href:"#"> Yogurt ingredients </a>
-                            </li>
-                            <li> 
-                                <a href:"#"> Bacterial cultures </a>
-                            </li>
-                            <li>
-                                <a href:"#"> How to drink our yogurt? </a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href:"#"> STORE </a> 
-                    </li>
-                    <li>
-                        <a href:"#"> ABOUT US </a>
-                    </li>
-                    <li>
-                        <a href:"#"> CONTACT US </a>
-                    </li>
-                </ul>
-            </div>
-            <div class="imagecontainer">
-                <img 
-                src="./MEDIA/images/lamadrigueralogo.jpeg"
-                >
-            </div>
+            <ul class="menuboard">
+                <li>
+                    <a href="#"> HOME </a>
+                    <ul>
+                        <li>
+                            <a href="#secwhatis"> What is La Madriguera? </a>
+                        </li>
+                        <li>
+                            <a href="#secbenefits"> Yogurt Benefits </a>
+                        </li>
+                        <li>
+                            <a href="#secingredients"> Yogurt ingredients </a>
+                        </li>
+                        <li>
+                            <a href="#secbacteria"> Bacterial cultures </a>
+                        </li>
+                        <li>
+                            <a href="#secproduction"> Yogurt production </a>
+                        </li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="HTML/Store.html"> STORE </a>
+                </li>
+                <li>
+                    <a href="HTML/Aboutus.html"> ABOUT US </a>
+                </li>
+                <li>
+                    <a href="./HTML/Contact.html"> CONTACT US </a>
+                </li>
+            </ul>
         </nav>
+        <div class="imagecontainer">
+            <img src="./MEDIA/images/lamadrigueralogo.jpeg">
+        </div>
     </header>
     <main>
         <div id="branding">
             <h1>
                 LA MADRIGUERA
-            </h1> 
-            <h class="slogan">
-                Artesanal como nuestras raíces
+            </h1>
+            <h2 class="slogan">
+                "Artesanal como nuestras raíces"
             </h2>
         </div>
-        <div id="whatis">
+        <div id="secwhatis">
             <br>
             <br>
             <h2> What is La Madriguera? </h2>
             <p>
                 <br>
-                It is a space where we want people to feel like a refuge where they can find their way to a more conscious
-                and healthy diet, without fear of making mistakes and with the desire to discover new alternatives. 
-                <span> What you can find here? </span>
-                <ul> 
-                    <li> 
-                        Nutrition guides 
+                It is a space where we want people to feel like a refuge where they can find their way to a more
+                conscious and healthy diet, without fear of making mistakes and with the desire to discover 
+                new alternatives.
+                <br>
+                <br> <span> What you can find here? </span>
+                <br>
+                <br>
+                <ul>
+                    <li>
+                     Nutrition guides
                     </li>
-                    <li> 
-                        Healty products 
+                    <li>
+                        Healty products
                     </li>
-                    <li> 
-                        Self care guidance 
+                    <li>
+                        Self care guidance
                     </li>
-                    <li> 
-                        Design your healty diet, according to your needs 
+                    <li>
+                        Design your healty diet, according to your needs
                     </li>
                 </ul>
             </p>
-            <img src="./MEDIA/images/healthydiet.jpg">
+            <img src="./MEDIA/images/healthydiet.jpg" class="whatimage">
         </div>
         <div id="secbenefits">
-
+            <h2> Yogurt Benefits </h2>
+            <p>
+                <br>
+                Yogurt is a dairy product made by fermenting milk with a bacterial yogurt culture.
+                It provides protein and calcium, and it may enhance healthy probiotic gut bacteria.
+                <br>
+                <br>
+                <ul>
+                    <li>
+                        It’s rich in important nutrients.
+                    </li>
+                    <li>
+                        It’s high in protein
+                    </li>
+                    <li>
+                        It may benefit digestive health
+                    </li>
+                    <li>
+                        It may strengthen your immune system
+                    </li>
+                    <li>
+                        It may benefit heart health
+                    </li>
+                    <li>
+                        It may promote weight management
+                    </li>
+                </ul>
+            </p>
+        </div>
+        <br>
+        <div id="secingredients">
+            <h2> Yogurt Ingredients </h2>
+            <p>
+                <br>
+                The main ingredient in yogurt is milk. The type of milk used depends on the type of yogurt whole milk
+                for full fat yogurt, lowfat milk for lowfat yogurt, and skim milk for nonfat yogurt. Other 
+                dairy ingredients are allowed in yogurt to adjust the composition, such as cream to adjust 
+                the fat content, and nonfat dry milk to adjust the solids content. The solids content of 
+                yogurt is often adjusted above the 8.25% minimum to provide a better body and texture
+                to the finished yogurt. The CFR contains a list of the permissible dairy ingredients for yogurt.<br>
+                <br>
+                <span> What use to provide variety to the consumer? </span>
+                <br>
+                <br>
+                <ul>
+                    <li>
+                        Sweeteners
+                    </li>
+                    <li>
+                        Flavors
+                    </li>
+                    <li>
+                        Fruits
+                    </li>
+                </ul>
+                <img src="./MEDIA/images/yougurt.jpg" class="ingredients">
+            </p>
+        </div>
+        <div id="secbacteria">
+            <h2> Bacterial Cultures </h2>
+            <p>
+                The main (starter) cultures in yogurt are Lactobacillus bulgaricus and Streptococcus thermophilus. The
+                function of the starter cultures is to ferment lactose (milk sugar) to produce lactic acid. The increase
+                in lactic acid decreases pH and causes the milk to clot, or form the soft gel that is characteristic of
+                yogurt. The fermentation of lactose also produces the flavor compounds that are characteristic of
+                yogurt. Lactobacillus bulgaricus and Streptococcus thermophilus are the only 2 cultures required by law
+                (CFR) to be present in yogurt.
+                <br> 
+                <br>
+                <span> Bacterial cultures: </span>
+                <br>
+                <br>
+                <ul>
+                    <li>
+                        Lactobacillus acidophilus
+                    </li>
+                    <li>
+                        Lactobacillus subsp.casei
+                    </li>
+                    <li>
+                        Bifido-bacterias
+                    </li>
+                </ul>
+            </p>
+        </div>
+        <br>
+        <div id="secproduction">
+            <h2> How is the production? </h2>
+            <p>
+                <br>
+                <br>
+                <ul>
+                    <li>
+                        Adjust Milk Composition & Blend Ingredients
+                    </li>
+                    <li>
+                        Pasteurize Milk
+                    </li>
+                    <li>
+                        Homogenize
+                    </li>
+                    <li>
+                        Cool Milk
+                    </li>
+                    <li>
+                        Inoculate with Starter Cultures
+                    </li>
+                    <li>
+                        Hold
+                    </li>
+                    <li>
+                        Cool
+                    </li>
+                    <li>
+                        Add flavors & fruit
+                    </li>
+                    <li>
+                        Package
+                    </li>
+                </ul>
+            </p>
+        </div>
+        <br>
+        <br>
+        <div id="video">
+            <video autoplay loop muted src="./MEDIA/videos/bunnycontact.mp4">
+            </video>
         </div>
     </main>
+    <footer>
+        <p>
+            LA MADRIGUERA <br>
+            "Artesanal como nuestras raíces" <br>
+            Est 2022
+        </P>
+    </footer>
 </body>
 
-
+</html>
