--- a/HTML/Store.html
+++ b/HTML/Store.html
@@ -3,7 +3,7 @@
 
 <head>
     <title> LA MADRIGUERA CONTACT </title>
-    <link href="../CSS/contact.css" rel="STYLESHEET">
+    <link href="../CSS/store.css" rel="STYLESHEET">
 </head>
 
 <body>
@@ -24,15 +24,28 @@
                 </li>
             </ul>
         </nav>
-        <div class="imagecontainer">
-            <img src="../MEDIA/images/lamadrigueralogo.jpeg">
-        </div>
     </header>
-    <footer>
-        <p>
-            LA MADRIGUERA <br>
-            "Artesanal como nuestras raíces" <br>
-            Est 2022
-        </P>
-    </footer>
+    <br>
+    <br>
+    <br>
+    <main> 
+        <div class="content">
+            <p>
+                PRODUCTS IN PROCESS <br>
+                LA MADRIGUERA <br>
+                "Artesanal como nuestras raíces" <br>
+            </p> <br>
+        <br>
+        <br>
+        </div>
+        <div class="tittle"> 
+            <h1> THANKS FOR BE PATIENT! </h1>
+        </div>
+        <div id="#video_background">
+            <div id="video">
+                <video  id="video_background" autoplay loop muted src="../MEDIA/videos/landingvideo.mp4">
+                </video>
+            </div>
+        </div>
+    </main>
 </body>
