change a name of a link

--- a/HTML/Contact.html
+++ b/HTML/Contact.html
@@ -34,7 +34,7 @@
         <br>
             <p>Please, complete the next fields and we will contact you, for your order </p>
         <br>
-            <form action="landingpage.html" method="POST" class="fields">
+            <form action="../HTML/landingpage.html" method="POST" class="fields">
                 <div class="inputs">
                     <label for="Name">Give us your name</label>
                     <input type="text" name="name" id="Name" required>
